# trmnl-weather-plot

./: .gitignore  README.md  main.py  pyproject.toml  seattle.yaml
.github/workflows/: schedule.yml
