[project]
name = "trmnl-weather-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
